forms.py, superuser, models.py y views.py

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -29,11 +29,11 @@
                 {% if user.is_authenticated %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href=" {% url 'logout' %} ">cerrar sesión</a>
+                    <a class="nav-link" href="#"> !Hola!  {{ user.username }} </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> !Hola!  {{ user.username }} </a>
+                    <a class="nav-link" href=" {% url 'home' %} ">cerrar sesión</a>
                 </li>
 
                 {% else %}
