--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -24,6 +24,8 @@
                         <p>Ingresa tu usuario y contraseña para iniciar sesión</p>
 
                         <form class="form-login mx-auto">
+
+                            {% csrf_token %}
                             
                             {{ form }}
 
