--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -23,7 +23,7 @@
                         <h4>¡Bienvenido!</h4>
                         <p>Ingresa tu usuario y contraseña para iniciar sesión</p>
 
-                        <form class="form-login mx-auto">
+                        <form method="POST" class="form-login mx-auto">
 
                             {% csrf_token %}
                             
