--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -29,11 +29,16 @@
                 {% if user.is_authenticated %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href=" {% url 'logout' %} ">cerrar sesión</a>
+                    <a class="nav-link" href="#"> !Hola!  {{ user.username }} </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> !Hola!  {{ user.username }} </a>
+
+                    <form method="POST" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link btn btn-link">Cerrar sesión</button>
+                    </form>
+
                 </li>
 
                 {% else %}
