--- a/core/templates/registration/registro.html
+++ b/core/templates/registration/registro.html
@@ -18,8 +18,11 @@
                         <h3>Registro de Usuario</h3>
                         <hr>
                         <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" class="card-img-top" alt="logo-login">
-                        <form method="post" class="form-login mx-auto">
+                        <form action = "" method="post" class="form-login mx-auto">
+
+                            {% csrf_token %}  
                             {{ form }}
+                            
                             <br>
                             <button type="submit" class="btn btn-outline-warning w-100">Registrarse</button>
                         </form>
