--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -19,26 +19,21 @@
 
                         <h3>Iniciar sesión</h3>
                         <hr>
-                        <img src=" {% static 'core/img/logo_SCHOLAR_FLAME.jpg' %} " class="card-img-top" alt="logo-login">
+                        <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" class="card-img-top" alt="logo-login">
                         <h4>¡Bienvenido!</h4>
                         <p>Ingresa tu usuario y contraseña para iniciar sesión</p>
 
-                        <form method="post" action="{% url 'pregunta' %}"  class="form-login mx-auto">
-
+                        <form method="post" action="{% url 'login' %}" class="form-login mx-auto">
                             {% csrf_token %}
-                            
-                            {{ form }}
-
+                            {{ form.as_p }}
                             <br>
-
-                            <button  type="submit" class="btn btn-outline-warning w-100">Iniciar sesión</button>
-
+                            <button type="submit" class="btn btn-outline-warning w-100">Iniciar sesión</button>
                         </form>
 
                         <br>
 
                         <strong>¿Eres nuevo en Scholar flame?</strong>
-                        <p><a href=" {% url 'registro' %} " class="text-decoration-none">Crear cuenta</a></p>
+                        <p><a href="{% url 'registro' %}" class="text-decoration-none">Crear cuenta</a></p>
                     </div>
                 </div>
             </div>
@@ -46,6 +41,5 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-
 </body>
-</html> 
+</html>
