--- a/core/templates/registration/registro.html
+++ b/core/templates/registration/registro.html
@@ -18,7 +18,7 @@
                         <h3>Registro de Usuario</h3>
                         <hr>
                         <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" class="card-img-top" alt="logo-login">
-                        <form action = "" method="post" class="form-login mx-auto">
+                        <form method="post" class="form-login mx-auto">
 
                             {% csrf_token %}  
                             {{ form }}
