--- a/core/templates/registration/password_reset_form.html
+++ b/core/templates/registration/password_reset_form.html
@@ -17,30 +17,19 @@
                 <div class="card text-center">
                     <div class="card-body">
 
-                        <h3>Iniciar sesión</h3>
-                        <hr>
-                        <img src=" {% static 'core/img/logo_SCHOLAR_FLAME.jpg' %} " class="card-img-top" alt="logo-login">
-                        <h4>¡Bienvenido!</h4>
-                        <p>Ingresa tu usuario y contraseña para iniciar sesión</p>
+                        <h2>Restablecer Contraseña</h2>
 
                         <form method="POST" class="form-login mx-auto">
-
+                        
                             {% csrf_token %}
-                            
                             {{ form }}
 
                             <br>
 
-                            <button type="submit" class="btn btn-outline-warning w-100">Iniciar sesión</button>
+                            <button type="submit" class="btn btn-outline-warning w-100">Enviar correo de restablecimiento</button>
 
                         </form>
 
-                        <br>
-
-                        <p><a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a></p>
-
-                        <strong>¿Eres nuevo en Scholar flame?</strong>
-                        <p><a href=" {% url 'registro' %} " class="text-decoration-none">Crear cuenta</a></p>
                     </div>
                 </div>
             </div>
