--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -44,7 +44,7 @@
                 {% else %}
                 
                 <li class="nav-item">
-                    <a class="nav-link" href=" {% url 'login' %} ">Iniciar sesión</a>
+                    <a class="nav-link" href="login/">Iniciar sesión</a>
                 </li>
 
                 <li class="nav-item">
