--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -29,7 +29,11 @@
                 {% if user.is_authenticated %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> !Hola!  {{ user.username }} </a>
+                    <a class="nav-link" href="#"> Nivel Educacional {{ nivel_educacional }} </a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> ¡Hola!  {{ user.username }} </a>
                 </li>
 
                 <li class="nav-item">
