verificar si el email está en la base de datos

--- a/core/templates/registration/password_reset_form.html
+++ b/core/templates/registration/password_reset_form.html
@@ -18,7 +18,8 @@
                     <div class="card-body">
 
                         <h2>Restablecer Contraseña</h2>
-
+                        <p>Introduce tu correo electrónico para recibir un enlace para restablecer tu contraseña.</p>
+                        
                         <form method="POST" class="form-login mx-auto">
                         
                             {% csrf_token %}
@@ -29,6 +30,16 @@
                             <button type="submit" class="btn btn-outline-warning w-100">Enviar correo de restablecimiento</button>
 
                         </form>
+
+                        {% if form.errors %}
+                            <div class="alert alert-danger">
+                                {% for field in form %}
+                                    {% for error in field.errors %}
+                                        <p>{{ error }}</p>
+                                    {% endfor %}
+                                {% endfor %}
+                            </div>
+                        {% endif %}
 
                     </div>
                 </div>
