--- a/core/templates/core/perfil.html
+++ b/core/templates/core/perfil.html
@@ -16,7 +16,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="/">Inicio</a>
                 </li>
 
                 <li class="nav-item">
@@ -33,7 +33,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'perfil' %}"> !Hola {{ user.username }}! </a>
+                    <a class="nav-link" href="{% url 'perfil' %}"> !Hola!  {{ user.username }} </a>
                 </li>
 
                 {% else %}
@@ -51,35 +51,16 @@
         </div>
     </div>
 </nav>
-
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{% static 'core/img/Imagen1.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{% static 'core/img/Imagen2.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </div>
+        <ul>
+            <li>Nombre: {{ user.first_name }} </li>
+            <li>Apellido: {{ user.last_name }} </li>
+            <li>Rut: {{ user.usuariodetalles.rut }} </li>
+            <li>Usuario: {{ user.username }} </li>
+            <li>Email: {{ user.email }} </li>
+        </ul>
+        
     </div>
 </div>
-
-<footer class="footer mt-auto py-3 custom-footer">
-    <div class="container">
-        <span class="text-muted">&copy; Scholar Flame</span>
-    </div>
-</footer>
 {% endblock %}
