--- a/core/templates/core/bandeja_entrada.html
+++ b/core/templates/core/bandeja_entrada.html
@@ -68,32 +68,23 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{% static 'core/img/Imagen1.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{% static 'core/img/Imagen2.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </div>
+        <h2>Bandeja de Entrada</h2>
+        <ul>
+            {% for mensaje in mensajes %}
+            <li>
+                <strong>De:</strong> {{ mensaje.remitente.username }}<br>
+                <strong>Fecha:</strong> {{ mensaje.fecha_envio }}<br>
+                <strong>Mensaje:</strong> {{ mensaje.contenido }}
+            </li>
+            {% endfor %}
+        </ul>
+        <a href="{% url 'enviar_mensaje' %}">Enviar Mensaje</a>
     </div>
 </div>
 
 <footer class="footer mt-auto py-3 custom-footer">
     <div class="container">
-        <span class="text-muted">&copy; Scholar Flame</span>
+        <span class="">&copy; Scholar Flame</span>
     </div>
 </footer>
 {% endblock %}
