--- a/core/templates/core/enviar_mensaje.html
+++ b/core/templates/core/enviar_mensaje.html
@@ -68,28 +68,15 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{% static 'core/img/Imagen1.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{% static 'core/img/Imagen2.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </div>
+        <h2>Enviar Mensaje</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Enviar</button>
+        </form>
     </div>
 </div>
+
 
 <footer class="footer mt-auto py-3 custom-footer">
     <div class="container">
