--- a/core/templates/core/enviar_mensaje.html
+++ b/core/templates/core/enviar_mensaje.html
@@ -2,96 +2,30 @@
 {% load static %}
 
 {% block content %}
-<nav class="navbar navbar-expand-lg custom-navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" id="Logo" alt="Logo" class="logo">
-        </a>
-        
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Noticias</a>
-                </li>
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'bandeja_entrada' %}">Mensajes</a>
-                </li>
-                {% endif %}
-            </ul>
-            
-            <ul class="navbar-nav">
-                
-                {% if user.is_authenticated %}
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> Educación {{ nivel_educacional }} </a>
-                </li>
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> ¡Hola!  {{ user.username }} </a>
-                </li>
-
-                <li class="nav-item">
-                    <form method="POST" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button type="submit" class="nav-link btn btn-link">Cerrar sesión</button>
-                    </form>
-                </li>
-
-                {% else %}
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'registro' %}">Registrate</a>
-                </li>
-
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-</nav>
-
 <div class="container mt-4 mb-5">
     <div class="row justify-content-center">
         <div class="col-lg-6">
             <div class="card">
                 <div class="card-header bg-dark text-white">
-                    <h5 class="mb-0">Enviar Mensaje</h5>
+                    <h5 class="mb-0 text-center">Enviar Mensaje</h5>
                 </div>
                 <div class="card-body text-center">
                     <form method="post">
                         {% csrf_token %}
                         <div class="mb-3">
-                            <label for="id_destinatario" class="form-label">Destinatario:</label>
                             {{ form.destinatario }}
                             {% if form.destinatario.errors %}
-                            <div class="invalid-feedback">
+                            <div class="invalid-feedback d-block">
                                 {% for error in form.destinatario.errors %}
-                                <div class="alert alert-danger" role="alert">
-                                    {{ error }}
-                                </div>
+                                {{ error }}
                                 {% endfor %}
                             </div>
                             {% endif %}
                         </div>
                         <div class="mb-3">
-                            <label for="id_contenido" class="form-label">Contenido:</label> <br>
                             {{ form.contenido }}
                             {% if form.contenido.errors %}
-                            <div class="invalid-feedback">
+                            <div class="invalid-feedback d-block">
                                 {% for error in form.contenido.errors %}
                                 {{ error }}
                                 {% endfor %}
@@ -99,16 +33,10 @@
                             {% endif %}
                         </div>
                         <button type="submit" class="btn btn-success">Enviar</button>
-                    </form>
+                    </form>                                    
                 </div>                
             </div>
         </div>
     </div>
 </div>
-
-<footer class="footer mt-auto py-3 custom-footer">
-    <div class="container">
-        <span>&copy; Scholar Flame</span>
-    </div>
-</footer>
 {% endblock %}
