Revert "Profesor puede enviar mensajes pero no sale el error cuando trata de enviar uno a sí mismo, arreglo de error en nivel educacional y demás"
This reverts commit 24394d91aea32b745972666f703b672f99ac0316.

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -34,7 +34,7 @@
                 {% if user.is_authenticated %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Educación {{ nivel_educacional }} </a>
+                    <a class="nav-link" href="#"> Nivel Educacional {{ nivel_educacional }} </a>
                 </li>
                 
                 <li class="nav-item">
@@ -93,7 +93,7 @@
 
 <footer class="footer mt-auto py-3 custom-footer">
     <div class="container">
-        <span>&copy; Scholar Flame</span>
+        <span class="text-muted">&copy; Scholar Flame</span>
     </div>
 </footer>
 {% endblock %}
