--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -16,17 +16,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="#">Noticias</a>
                 </li>
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'bandeja_entrada' %}">Mensajes</a>
-                </li>
-                {% endif %}
             </ul>
             
             <ul class="navbar-nav">
