--- a/core/static/core/css/styles.css
+++ b/core/static/core/css/styles.css
@@ -61,3 +61,17 @@ small{
     background-color: #173b45;
     color:#fff;
 }
+
+.messages-container {
+    position: fixed;
+    top: 8%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; /* Asegura que esté encima de otros elementos */
+}
+
+.alert-error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-color: #f5c6cb;
+}
