--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,6 +12,16 @@
 </head>
 </head>
 <body>
+    {% if messages %}
+    <div class="messages-container">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
     <nav class="navbar navbar-expand-lg custom-navbar navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -78,11 +88,11 @@
     
     <footer class="footer mt-auto py-3 custom-footer">
         <div class="container">
-            <span>&copy; Scholar Flame</span>
+            <span class="text-muted">&copy; Scholar Flame</span>
         </div>
     </footer>
     {% block script %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
