--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,104 +10,103 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 </head>
-</head>
 <body>
-    {% if messages %}
-    <div class="messages-container">
-        {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {% endfor %}
-    </div>
-    {% endif %}
-    <nav class="navbar navbar-expand-lg custom-navbar navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" id="Logo" alt="Logo" class="logo">
-            </a>
-            
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home'%}">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Noticias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'bandeja_entrada'%}">Mensajes</a>
-                    </li>
-                </ul>
-                
-                <ul class="navbar-nav">
-                    
-                    {% if user.is_authenticated %}
-    
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Educación {{ nivel_educacional }} </a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"> ¡Hola!  {{ user.username }} </a>
-                    </li>
-    
-                    <li class="nav-item">
-    
-                        <form method="POST" action="{% url 'logout' %}">
-                            {% csrf_token %}
-                            <button type="submit" class="nav-link btn btn-link">Cerrar sesión</button>
-                        </form>
-    
-                    </li>
-    
-                    {% else %}
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href=" {% url 'login' %} ">Iniciar sesión</a>
-                    </li>
-    
-                    <li class="nav-item">
-                        <a class="nav-link" href=" {% url 'registro' %} ">Registrate</a>
-                    </li>
-    
-                    {% endif %}
-                </ul>
+    <div id="wrapper" class="d-flex flex-column min-vh-100">
+        {% if messages %}
+        <div class="messages-container">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
+            {% endfor %}
         </div>
-    </nav>
+        {% endif %}
+        <nav class="navbar navbar-expand-lg custom-navbar navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" id="Logo" alt="Logo" class="logo">
+                </a>
+                
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'home'%}">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Noticias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'bandeja_entrada'%}">Mensajes</a>
+                        </li>
+                    </ul>
+                    
+                    <ul class="navbar-nav">
+                        
+                        {% if user.is_authenticated %}
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Educación {{ nivel_educacional }} </a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"> ¡Hola!  {{ user.username }} </a>
+                        </li>
+        
+                        <li class="nav-item">
+        
+                            <form method="POST" action="{% url 'logout' %}">
+                                {% csrf_token %}
+                                <button type="submit" class="nav-link btn btn-link">Cerrar sesión</button>
+                            </form>
+        
+                        </li>
+        
+                        {% else %}
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href=" {% url 'login' %} ">Iniciar sesión</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href=" {% url 'registro' %} ">Registrate</a>
+                        </li>
+        
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-    {% block content %}
-    {% endblock %}
-    
-    <footer class="footer mt-auto py-3 custom-footer">
-        <div class="container">
-            <span class="text-muted">&copy; Scholar Flame</span>
+        <div class="content flex-grow-1">
+            {% block content %}
+            {% endblock %}
         </div>
-    </footer>
+
+        <footer class="footer mt-auto py-3 custom-footer">
+            <div class="container">
+                <span class="text-muted">&copy; Scholar Flame</span>
+            </div>
+        </footer>
+    </div>
+    
     {% block script %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
-
         $(document).ready(function() {
-            // Inicializar Select2 en los campos select
             $('#id_destinatario').select2({
-                width: '100%',  // Establece el ancho al 100% del contenedor
                 dropdownParent: $('#nuevaConversacionModal')
             });
 
-            // Inicializar Select2 nuevamente cuando el modal se muestre
             $('#nuevaConversacionModal').on('shown.bs.modal', function () {
                 $('#id_destinatario').select2({
-                    width: '100%',  // Establece el ancho al 100% del contenedor
                     dropdownParent: $('#nuevaConversacionModal')
                 });
             });
