--- a/core/templates/core/cursos.html
+++ b/core/templates/core/cursos.html
@@ -2,23 +2,76 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <h2>Mis Cursos</h2>
-            <ul class="list-group">
-                {% for curso in cursos %}
-                <li class="list-group-item">
-                    <h4>{{ curso.titulo }}</h4>
-                    <p>{{ curso.descripcion }}</p>
-                    <p>Instructor: {{ curso.instructor }}</p>
-                    <p>Fecha de inicio: {{ curso.fecha_inicio }}</p>
+<nav  class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" id="Logo" alt="Logo" class="logo">
+        </a>
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'home' %}">Página Principal</a>
                 </li>
-                {% empty %}
-                <li class="list-group-item">No estás inscrito en ningún curso aún.</li>
-                {% endfor %}
+
+            </ul>
+            
+            <ul class="navbar-nav">
+
+                <li class="nav-item active">
+
+                    <form method="POST" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link btn btn-link">Cerrar sesión</button>
+                    </form>
+
+                </li>
+
             </ul>
         </div>
+
+    </div>
+</nav>
+
+
+<div class="row justify-content-center">
+    <div class="col-lg-8">
+        
+        <h2>Mis cursos</h2>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            {% for curso in cursos %}
+            <div class="col text-center">
+                <div class="card h-100">
+                    <div class="card-img">
+                        {% if curso.logo %}
+                        <img src="{{ curso.logo.url }}" class="img-fluid" alt="{{ curso.nombre }}">
+                        {% else %}
+                        <img src="{% static 'core/img/default_logo.png' %}" class="img-fluid" alt="{{ curso.nombre }}">
+                        {% endif %}
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">{{ curso.nombre }}</h5>
+                        <p class="card-text">{{ curso.descripcion }}</p>
+                    </div>
+                </div>
+            </div>
+            {% empty %}
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <p class="card-text">No estás inscrito en ningún curso aún.</p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+
     </div>
 </div>
 {% endblock %}
