--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<nav class="navbar navbar-expand-lg custom-navbar navbar-dark">
+<nav  class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="{% static 'core/img/logo_SCHOLAR_FLAME.jpg' %}" id="Logo" alt="Logo" class="logo">
@@ -16,26 +16,22 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" href="#">Página Principal</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Noticias</a>
+                    <a class="nav-link active" href="{% url 'cursos' %}"> Mis Cursos</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'cursos' %}">Cursos</a>
+                    <a class="nav-link" href="{% url 'admin:index' %}">Administracion</a>
                 </li>
 
             </ul>
             
             <ul class="navbar-nav">
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> !Hola!  {{ user.username }} </a>
-                </li>
-
-                <li class="nav-item">
+                <li class="nav-item active">
 
                     <form method="POST" action="{% url 'logout' %}">
                         {% csrf_token %}
@@ -49,34 +45,23 @@
     </div>
 </nav>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{% static 'core/img/Imagen1.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{% static 'core/img/Imagen2.jpg' %}" class="d-block w-100"  style="height: 75vh;" alt="img">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </div>
+
+<div class="row">
+    <div class="col text-center">
+        <h4>¡Hola!  {{ user.username }}</h4>
     </div>
 </div>
 
-<footer class="footer mt-auto py-3 custom-footer">
-    <div class="container">
-        <span class="text-muted">&copy; Scholar Flame</span>
+<div class="row">
+    <div class="col text-center">
+        <img src="static/core/img/fondo.jpg" class="img-fluid" alt="fondo">
     </div>
+</div>
+
+<footer class="bg-body-tertiary text-center text-lg-start">
+    <div class="text-center p-3">
+      © 2023 Copyright
+  </div>
 </footer>
-{% endblock %}
+
+{% endblock %} 
